snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220822.093702-3.pom.md5
00502f6b7f16ee3a0c04e740f113e66d